tests/type-checking/control-flow/for/for-list/for_bool_in_int_list_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// b: bool = True
// for b in [0]:
//   b = True

builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "b"] {
        choco.ast.type_name() ["type_name" = "bool"]
      }
    } {
      choco.ast.literal() ["value" = !choco.ast.bool<True>]
    }
  } {
    choco.ast.for() ["iter_name" = "b"] {
      choco.ast.list_expr() {
        choco.ast.literal() ["value" = 0 : !i32]
      }
    } {
      choco.ast.assign() {
        choco.ast.id_expr() ["id" = "b"]
      } {
        choco.ast.literal() ["value" = !choco.ast.bool<True>]
      }
    }
  }
}
// CHECK: Semantic error:
